--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     <nav class="navbar">
       <div class="nav_container">
         <a href="#" id="navbar_logo">West</a>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
+      <ul class="navbar_menu">
+        <li class="nav_item"><a href="#" class="navbar_links">Home</a></li>
+        <li class="nav_item">
+          <a href="./tech.html" class="navbar_links">Tech</a>
+        </li>
+      </ul>
     </nav>
     <script src="script.js"></script>
   </body>
