--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <li class="nav_item">
           <a href="./tech.html" class="navbar_links">Tech</a>
         </li>
+        <li class="nav_item">
+          <a href="#" class="navbar_links">Products</a>
+        </li>
+        <li class="nav_item">
+          <a href="#" class="navbar_links">Sign Up</a>
+        </li>
       </ul>
     </nav>
     <script src="script.js"></script>
