--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar">
       <div class="nav_container">
-        <a href="#" id="navbar_logo">West</a>
+        <a href="#" id="navbar_logo">WEST</a>
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
@@ -23,8 +23,8 @@
         <li class="nav_item">
           <a href="#" class="navbar_links">Products</a>
         </li>
-        <li class="nav_item">
-          <a href="#" class="navbar_links">Sign Up</a>
+        <li class="nav_btn">
+          <a href="#" class="button">Sign Up</a>
         </li>
       </ul>
     </nav>
