--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <span class="bar"></span>
       </div>
       <ul class="navbar_menu">
-        <li class="nav_item"><a href="#" class="navbar_links">Home</a></li>
+        <li class="nav_item">
+          <a href="/index.html" class="navbar_links">Home</a>
+        </li>
         <li class="nav_item">
           <a href="./tech.html" class="navbar_links">Tech</a>
         </li>
