--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         </li>
       </ul>
     </nav>
+    <!-- Main content -->
+    <section class="hero"></section>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
