--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
       </ul>
     </nav>
     <!-- Main content -->
-    <section class="hero"></section>
+    <section class="hero">
+      <div class="container">
+        <div class="main-content"></div>
+      </div>
+    </section>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
