--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Main content -->
     <section class="hero">
       <div class="container">
-        <div class="main-content"></div>
+        <div class="main-content">helloworld!!</div>
       </div>
     </section>
     <!-- Javascript -->
