--- a/index.html
+++ b/index.html
@@ -7,36 +7,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Navbar -->
+    <!-- Navbar  -->
     <nav class="navbar">
-      <div class="nav_container">
-        <a href="#" id="navbar_logo">WEST</a>
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+      <div class="navbar_container">
+        <a href="/" id="navbar_logo"><i class="fas fa-gem"></i>WEST</a>
+        <div class="navbar_toggle" id="mobile-menu">
+          <span class="bar"></span> <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <ul class="navbar_menu">
+          <li class="navbar_item">
+            <a href="/" class="navbar_links">Home</a>
+          </li>
+          <li class="navbar_item">
+            <a href="/tech.html" class="navbar_links">Tech</a>
+          </li>
+          <li class="navbar_item">
+            <a href="/" class="navbar_links">Products</a>
+          </li>
+          <li class="navbar_btn"><a href="/" class="button">Sign Up</a></li>
+        </ul>
       </div>
-      <ul class="navbar_menu">
-        <li class="nav_item">
-          <a href="/index.html" class="navbar_links">Home</a>
-        </li>
-        <li class="nav_item">
-          <a href="./tech.html" class="navbar_links">Tech</a>
-        </li>
-        <li class="nav_item">
-          <a href="#" class="navbar_links">Products</a>
-        </li>
-        <li class="nav_btn">
-          <a href="#" class="button">Sign Up</a>
-        </li>
-      </ul>
     </nav>
-    <!-- Main content -->
-    <section class="hero">
-      <div class="container">
-        <div class="main-content">helloworld!!</div>
-      </div>
-    </section>
+
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
