--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
       </div>
     </nav>
-
+    <!-- Hero section -->
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
