--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
     </nav>
     <!-- Hero section -->
+    <section class="hero"></section>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
