--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       </div>
     </nav>
     <!-- Hero section -->
-    <section class="hero"></section>
+    <section class="hero">
+      <h2>Hello world</h2>
+    </section>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
