--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <!-- Hero section -->
     <section class="hero">
       <h2>Hello world</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, vitae.
+      </p>
     </section>
     <!-- Javascript -->
     <script src="script.js"></script>
