--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <h2>Hello world</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, vitae.
+        Get it done by tommarow
       </p>
     </section>
     <!-- Javascript -->
