--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, vitae.
         Get it done by tommarow
       </p>
+      <form method="post">
+        <fieldset>
+          <div>
+            <label for="feel">How do you feel</label>
+            <input type="text" />
+          </div>
+        </fieldset>
+        <fieldset></fieldset>
+      </form>
     </section>
     <!-- Javascript -->
     <script src="script.js"></script>
