--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </fieldset>
       </form>
       <div class="main">This forms are great</div>
+      <div>It feels weird now</div>
     </section>
     <!-- Javascript -->
     <script src="script.js"></script>
