--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </fieldset>
       </form>
       <div class="main">This forms are great</div>
-      <div>It feels weird now and github desktop is easy to use</div>
+      <!-- <div>It feels weird now and github desktop is easy to use</div> -->
     </section>
     <!-- Javascript -->
     <script src="script.js"></script>
