--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </form>
       <div class="main">This forms are great</div>
       <!-- <div>It feels weird now and github desktop is easy to use</div> -->
-      <div>Lets gets started</div>
+      <div>Lets do it today</div>
     </section>
     <!-- Javascript -->
     <script src="script.js"></script>
