--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navbar  -->
     <nav class="navbar">
       <div class="navbar_container">
-        <a href="/" id="navbar_logo"><i class="fas fa-gem"></i>WEST</a>
+        <a href="/" id="navbar_logo"><i class="fas fa-gem"></i>WEST TECH</a>
         <div class="navbar_toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
@@ -30,35 +30,7 @@
       </div>
     </nav>
     <!-- Hero section -->
-    <section class="hero">
-      <h2>Hello world</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, vitae.
-        Get it done by tommarow
-      </p>
-      <form method="post">
-        <fieldset>
-          <div>
-            <label for="feel">How do you feel</label> <br />
-            <input type="text" /><br />
-          </div>
-          <div>
-            <label for="like">Like</label>
-            <input type="text" />
-          </div>
-        </fieldset>
-        <fieldset>
-          <div>
-            <label for="range">Range</label>
-            <input type="range" min="1" max="5" value="2" />
-          </div>
-          <input type="submit" />
-        </fieldset>
-      </form>
-      <div class="main">This forms are great</div>
-      <!-- <div>It feels weird now and github desktop is easy to use</div> -->
-      <div>Lets do it today</div>
-    </section>
+    <section class="hero"></section>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
