--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>West-Tech</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/5b51e4fc02.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Navbar  -->
     <nav class="navbar">
       <div class="navbar_container">
-        <a href="/" id="navbar_logo"><i class="fas fa-gem"></i>WEST TECH</a>
+        <a href="/" id="navbar_logo">
+          <i class="fas fa-hat-cowboy-side"></i> WEST TECH</a
+        >
         <div class="navbar_toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
@@ -30,7 +44,19 @@
       </div>
     </nav>
     <!-- Hero section -->
-    <section class="hero"></section>
+    <section class="hero">
+      <div class="main_container">
+        <div class="main_content">
+          <h1>WEST GENERATION</h1>
+          <h2>Technology</h2>
+          <p>See what makes us different.</p>
+          <button class="main_btn"><a href="#">Get Started</a></button>
+        </div>
+        <div class="main_img-container">
+          <img src="Images/content-img.svg" alt="img" />
+        </div>
+      </div>
+    </section>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
