--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
         </div>
       </div>
     </section>
+    <!-- Services Sections -->
+    <div class="services">
+      <h1>See what the hype is about</h1>
+      <div class="services_container">
+        <div class="services_card">
+          <h2>Experience Bliss</h2>
+          <p>AI Powered Technology</p>
+          <button>Get Started</button>
+        </div>
+        <div class="services_card">
+          <h2>Are you Ready?</h2>
+          <p>Take the leap</p>
+          <button>Get Started</button>
+        </div>
+      </div>
+    </div>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
