--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="/" class="navbar_links">Home</a>
           </li>
           <li class="navbar_item">
-            <a href="/tech.html" class="navbar_links">Tech</a>
+            <a href="/" class="navbar_links">Tech</a>
           </li>
           <li class="navbar_item">
             <a href="/" class="navbar_links">Products</a>
